<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MazePlayerDrawActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="always">
        <!-- "file" submenu -->
        <menu>
            <item
                android:id="@+id/x_size"
                android:title="@string/x_size"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/y_size"
                android:title="@string/y_size"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/restart"
                android:title="@string/restart" />
            <item
                android:id="@+id/help"
                android:title="@string/help" />
            <!--<item android:id="@+id/file" android:title="file">-->
            <!--    &lt;!&ndash;"file" submenu&ndash;&gt;-->
            <!--    <menu>-->
            <!--        <item android:id="@+id/create_new" android:title="create_new" />-->
            <!--        <item android:id="@+id/open" android:title="open" />-->
            <!--    </menu>-->
            <!--</item>-->
        </menu>
    </item>
</menu>

