<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item android:id="@+id/menu_settings" android:orderInCategory="100" android:title="@string/action_settings" app:showAsAction="always">
        <!-- submenu -->
        <menu>
            <item android:id="@+id/menu_ranking" android:title="@string/ranking"  />
            <item android:id="@+id/menu_help" android:title="@string/help" />
            <item android:id="@+id/menu_info" android:title="@string/informacion" />
            <!--<item android:id="@+id/file" android:title="file" >-->
            <!--    &lt;!&ndash; submenu &ndash;&gt;-->
            <!--    <menu>-->
            <!--        <item android:id="@+id/create_new" android:title="create_new" />-->
            <!--        <item android:id="@+id/open" android:title="open" />-->
            <!--    </menu>-->
            <!--</item>-->
        </menu>
    </item>


    <!--<item android:id="@+id/popup" android:orderInCategory="100" android:title="popup" app:showAsAction="always" />-->
</menu>

