<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView android:id="@+id/tvPregunta" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignBaseline="@+id/etNombre" android:layout_alignParentStart="true" android:layout_alignParentLeft="true" android:layout_marginEnd="10dp" android:layout_marginRight="10dp" android:text="@string/comoTeLlamas" />

    <EditText android:id="@+id/etNombre" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_toEndOf="@+id/tvPregunta" android:layout_toRightOf="@+id/tvPregunta" android:autofillHints="" android:hint="@string/introduceNombre" android:inputType="text" />

    <Button
        android:id="@+id/Button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etNombre"
        android:onClick="onPulsar"
        android:text="@string/empezarLaberinto" />

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Button"
        android:orientation="vertical">

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/niveles" android:textSize="20sp" />

        <RadioGroup android:id="@+id/rgMazes"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <!--<LinearLayout android:layout_width="wrap_content" android:layout_weight="50" android:layout_height="wrap_content" android:orientation="horizontal">-->
            <!--    <RadioButton android:id="@+id/laberinto1" android:layout_width="75dp" android:layout_height="wrap_content" android:layout_weight="50" android:checked="false" android:gravity="center" android:onClick="selectLaberinto" android:tag="@string/laberinto_1" android:text="@string/laberinto_1" />-->
            <!--    <RadioButton android:id="@+id/laberinto2" android:layout_width="75dp" android:layout_height="wrap_content" android:layout_weight="50" android:checked="false" android:gravity="center" android:onClick="selectLaberinto" android:tag="@string/laberinto_2" android:text="@string/laberinto_2" />-->
            <!--</LinearLayout>-->
            <!--<LinearLayout android:layout_width="wrap_content" android:layout_weight="50" android:layout_height="wrap_content" android:orientation="horizontal">-->
            <!--    <RadioButton android:id="@+id/laberinto3" android:layout_width="75dp" android:layout_height="wrap_content" android:layout_weight="50" android:checked="false" android:gravity="center" android:onClick="selectLaberinto" android:tag="@string/laberinto_3" android:text="@string/laberinto_3" />-->
            <!--    <RadioButton android:id="@+id/laberinto4" android:layout_width="75dp" android:layout_height="wrap_content" android:layout_weight="50" android:checked="false" android:gravity="center" android:onClick="selectLaberinto" android:tag="@string/laberinto_4" android:text="@string/laberinto_4" />-->
            <!--</LinearLayout>-->
        </RadioGroup>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/modos_de_juego" android:textSize="20sp" />
        <RadioGroup android:id="@+id/rgModes"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <!--<RadioButton android:id="@+id/modo1" android:layout_width="75dp" android:layout_height="wrap_content" android:layout_weight="50" android:checked="false" android:gravity="center" android:text="@string/modo_texto" />-->
            <!--<RadioButton android:id="@+id/modo2" android:layout_width="75dp" android:layout_height="wrap_content" android:layout_weight="50" android:checked="false" android:gravity="center" android:text="@string/modo_dibujo" />-->
        </RadioGroup>
        <!--<ScrollView android:id="@+id/swv1" android:layout_width="fill_parent" android:layout_height="wrap_content">-->
        <!--    <TextView android:id="@+id/tvGanardores" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="" />-->
        <!--</ScrollView>-->
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout android:layout_width="match_parent" android:layout_height="1dp" android:layout_marginTop="10dp" android:layout_marginBottom="10dp" android:background="#000000" />

            <Button android:id="@+id/popup_ranking" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center" android:gravity="center" android:onClick="openPopup" android:orderInCategory="100" android:text="@string/ranking" />
            <Button android:id="@+id/popup_help" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center" android:gravity="center" android:onClick="openPopup" android:orderInCategory="100" android:text="@string/help" />
            <Button android:id="@+id/popup_info" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center" android:gravity="center" android:onClick="openPopup" android:orderInCategory="100" android:text="@string/informacion" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>