<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#AAAAAA"
    android:orientation="vertical"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:padding="10dip">

    <ScrollView android:id="@+id/sv_popup" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:orientation="vertical">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_popup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/test_pop_up" />
<!--            android:lines="3"-->

            <LinearLayout android:id="@+id/llPopupEnd" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="10dip" android:gravity="bottom" android:orientation="horizontal">
                <Button android:id="@+id/cancel_popup" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="50" android:text="@string/cancel" tools:ignore="ButtonStyle" />
                <Button android:id="@+id/accept_popup" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="50" android:text="@string/accept" tools:ignore="ButtonStyle" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>